syntax = "proto3";

package api.v1;

option go_package = "github.com/PoorMercymain/gophereats/pkg/api";

import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";

service DishesServiceV1 {
  rpc CreateIngredientV1(CreateIngredientRequestV1) returns (google.protobuf.Empty) {};
  rpc UpdateIngredientV1(UpdateIngredientRequestV1) returns (google.protobuf.Empty) {};
  rpc GetIngredientV1(IngredientIdV1) returns (IngredientV1) {};
  rpc DeleteIngredientV1(IngredientIdV1) returns (google.protobuf.Empty) {};
  rpc ListIngredientsV1(google.protobuf.Empty) returns (stream IngredientV1) {};

  rpc CreateDishV1(CreateDishRequestV1) returns (google.protobuf.Empty) {};
  rpc UpdateDishV1(UpdateDishRequestV1) returns (google.protobuf.Empty) {};
  rpc GetDishV1(DishIdV1) returns (DishV1) {};
  rpc DeleteDishV1(DishIdV1) returns (google.protobuf.Empty) {};
  rpc ListDishesV1(google.protobuf.Empty) returns (stream DishV1) {};

  rpc CreateBundleV1(CreateBundleRequestV1) returns (google.protobuf.Empty) {};
  rpc UpdateBundleV1(UpdateBundleRequestV1) returns (google.protobuf.Empty) {};
  rpc GetBundleV1(BundleIdV1) returns (BundleV1) {};
  rpc DeleteBundleV1(BundleIdV1) returns (google.protobuf.Empty) {};
  rpc ListBundlesV1(google.protobuf.Empty) returns (stream BundleV1) {};

  rpc AddBundleWeeklyDish(BundleWeeklyDishV1) returns (google.protobuf.Empty) {};
  rpc DeleteBundleWeeklyDish(BundleWeeklyDishV1) returns (google.protobuf.Empty) {};
  rpc GetBundleWeeklyDishes(GetBundleWeeklyDishesRequestV1) returns (stream DishV1) {};

  rpc CreateResourceV1(CreateResourceRequestV1) returns (google.protobuf.Empty) {};
  rpc UpdateResourceV1(UpdateResourceRequestV1) returns (google.protobuf.Empty) {};
  rpc GetResourceV1(ResourceIdV1) returns (ResourceResponseV1) {};
  rpc DeleteResourceV1(ResourceIdV1) returns (google.protobuf.Empty) {};
  rpc ListResourcesV1(google.protobuf.Empty) returns (stream ResourceResponseV1) {};

  rpc AttachResourceToDishV1(DishResourceRequestV1) returns (google.protobuf.Empty) {};
  rpc DetachResourceFromDishV1(DishResourceRequestV1) returns (google.protobuf.Empty) {};
  rpc ListDishResourcesV1(DishIdV1) returns (stream ResourceResponseV1) {};

  rpc SendOrderV1(SendOrderRequestV1) returns (google.protobuf.Empty) {};
  rpc CancelOrderV1(CancelOrderRequestV1) returns (google.protobuf.Empty) {};
}

message IngredientV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string unit = 3 [(buf.validate.field).string.min_len = 1];
}

message CreateIngredientRequestV1 {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string unit = 2 [(buf.validate.field).string.min_len = 1];
}

message UpdateIngredientRequestV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string unit = 3 [(buf.validate.field).string.min_len = 1];
}

message IngredientIdV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
}

message DishV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string description = 3 [(buf.validate.field).string.min_len = 1];
  repeated IngredientV1 ingredients = 4 [(buf.validate.field).ignore_empty = true];
}

message CreateDishRequestV1 {
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string description = 3 [(buf.validate.field).string.min_len = 1];
  repeated IngredientV1 ingredients = 4 [(buf.validate.field).ignore_empty = true];
}

message UpdateDishRequestV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string description = 3 [(buf.validate.field).string.min_len = 1];
  repeated IngredientV1 ingredients = 4 [(buf.validate.field).ignore_empty = true];
}

message DishIdV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
}

message BundleV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  uint64 price = 3 [(buf.validate.field).ignore_empty = false ];
}

message CreateBundleRequestV1 {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  uint64 price = 2 [(buf.validate.field).ignore_empty = false ];
}

message UpdateBundleRequestV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  uint64 price = 3 [(buf.validate.field).ignore_empty = false ];
}

message BundleIdV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false];
}

message BundleWeeklyDishV1 {
  uint64 week_number = 1 [(buf.validate.field).ignore_empty = false ];
  uint64 bundle_id = 2  [(buf.validate.field).ignore_empty = false ];
  uint64 dish_id = 3  [(buf.validate.field).ignore_empty = false ];
}

message GetBundleWeeklyDishesRequestV1 {
  uint64 week_number = 1 [(buf.validate.field).ignore_empty = false ];
  uint64 bundle_id = 2  [(buf.validate.field).ignore_empty = false ];
}

message ResourceV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  bytes data = 2 [(buf.validate.field).ignore_empty = false ];
  string filename = 3 [(buf.validate.field).string.min_len = 1];
  string type = 4 [(buf.validate.field).string.min_len = 1];
}

message CreateResourceRequestV1 {
  bytes data = 1 [(buf.validate.field).ignore_empty = false ];
  string filename = 2 [(buf.validate.field).string.min_len = 1];
  string type = 3 [(buf.validate.field).string.min_len = 1];
}

message UpdateResourceRequestV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  bytes data = 2 [(buf.validate.field).ignore_empty = false ];
  string filename = 3 [(buf.validate.field).string.min_len = 1];
  string type = 4 [(buf.validate.field).string.min_len = 1];
}

message ResourceIdV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
}

message ResourceResponseV1 {
  uint64 id = 1 [(buf.validate.field).ignore_empty = false ];
  string filename = 2 [(buf.validate.field).string.min_len = 1];
  string type = 3 [(buf.validate.field).string.min_len = 1];
}

message DishResourceRequestV1{
  uint64 dish_id = 1 [(buf.validate.field).ignore_empty = false ];
  uint64 resource_id = 2 [(buf.validate.field).ignore_empty = false ];
}

message SendOrderRequestV1 {
  uint64 customer_id = 1 [(buf.validate.field).ignore_empty = false ];
  string address = 2 [(buf.validate.field).string.min_len = 1];
  uint64 bundle_id = 3 [(buf.validate.field).ignore_empty = false ];
  uint64 week_num = 4 [(buf.validate.field).ignore_empty = false ];
}

message CancelOrderRequestV1 {
  uint64 customer_id = 1 [(buf.validate.field).ignore_empty = false ];
  uint64 week_num = 2 [(buf.validate.field).ignore_empty = false ];
}